--- a/src/app/pages/1-about/components/4-about-fourth-screen/about-fourth-screen.component.scss
+++ b/src/app/pages/1-about/components/4-about-fourth-screen/about-fourth-screen.component.scss
@@ -15,6 +15,7 @@
 
     &_description {
         width: 420px;
+        min-height: 192px;
         margin-top: 30px;
         line-height: 160%;
     }
@@ -35,5 +36,3 @@
         }
     }
 }
-
-
