--- a/src/app/pages/2-all-objects/components/1-objects-first-screen/objects-first-screen.component.html
+++ b/src/app/pages/2-all-objects/components/1-objects-first-screen/objects-first-screen.component.html
@@ -1,15 +1,14 @@
 <div class="objects__first">
     <div class="objects__first_wrapper">
-        <div class="container">
+        <div class="container" *transloco="let t; read: 'objects_first'">
             <app-crumbs [current]="currentCrumbsTitle"></app-crumbs>
 
-            <h1 class="objects__first_title">Доступные объекты</h1>
+            <h1 class="objects__first_title">
+                {{ t("objects_first_title") }}
+            </h1>
 
             <p class="objects__first_description">
-                Azur Life специализируется на премиум объектах недвижимости на
-                всей территории Франции. Мы послужим медиатором любой сделки с
-                элитной недвижимостью: купить, продать или арендовать
-                апартаменты можно качественно и быстро.
+                {{ t("objects_first_description") }}
             </p>
         </div>
     </div>
