--- a/src/app/pages/4-rent/components/1-rent-first-screen/rent-first-screen.component.html
+++ b/src/app/pages/4-rent/components/1-rent-first-screen/rent-first-screen.component.html
@@ -1,26 +1,27 @@
 <div class="rent__first">
-    <div class="container">
+    <div class="container" *transloco="let t; read: 'rent_first'">
         <app-crumbs [current]="currentCrumbsTitle"></app-crumbs>
 
         <div class="rent__first__title">
             <div class="rent__first__title_first">
-                <h2>Аренда</h2>
+                <h2>
+                    {{ t("rent_first_title") }}
+                </h2>
                 <div class="rent__first__title_first-logo">
                     <app-logo-circle></app-logo-circle>
                 </div>
             </div>
 
             <div class="rent__first__title_second">
-                <h2>на Лазурном берегу</h2>
+                <h2>
+                    {{ t("rent_first_title_second") }}
+                </h2>
             </div>
         </div>
 
-        <p class="rent__first_description">
-            Арендовать недвижимость на сезон или выбрать что-то на долгосрочный
-            период можно легко. <br />
-            Azur Life предоставляет опцию полного сопровождения сделки аренды.
-            Мы выберем премиальные виллы и апартаменты под Ваш запрос без
-            комиссии и дополнительных наценок.
-        </p>
+        <p
+            class="rent__first_description"
+            [innerHTML]="t('rent_first_description')"
+        ></p>
     </div>
 </div>
