--- a/src/app/pages/7-buy-sell-rent/components/1-buy-sell-rent-first-screen/buy-sell-rent-first-screen.component.scss
+++ b/src/app/pages/7-buy-sell-rent/components/1-buy-sell-rent-first-screen/buy-sell-rent-first-screen.component.scss
@@ -19,7 +19,7 @@
     }
 
     &_title {
-        max-width: 454px;
+        max-width: 254px;
         margin-top: 132px;
     }
 
@@ -31,5 +31,6 @@
     &_description {
         max-width: 425px;
         margin-top: 41px;
+        min-height: 105px;
     }
 }
